# aquagen-lite-firmware

./: .gitignore  CMakeLists.txt  README.md  partitions_4mb.csv  sdkconfig.defaults
docs/: SPEC.md
main/: CMakeLists.txt  app_config.c  app_config.h  azure_mqtt.c  azure_mqtt.h  device_twin.c  device_twin.h  dns_server.c  dns_server.h  flash_buffer.c  flash_buffer.h  idf_component.yml  iot_configs.h  iot_secrets.h.template  leds.c  leds.h  log_capture.c  log_capture.h  main.c  modbus_meter.c  modbus_meter.h  ota.c  ota.h  provisioning.c  provisioning.h  sas_token.c  sas_token.h  telemetry.c  telemetry.h  web_config.c  web_config.h  wifi_mgr.c  wifi_mgr.h  wireguard_client.c  wireguard_client.h
tools/: flash_board.sh  ota_fleet.sh  provision_batch.py  refresh_master_sheet.py  regen_qr_labels.py
